# WavTokenizer

./: .gitignore  pyproject.toml  requirements.txt
wavtokenizer/: infer.py  infer_m4a.py
wavtokenizer/decoder/: pretrained.py
